fix: Navbar on tablets

--- a/assets/sass/_global.scss
+++ b/assets/sass/_global.scss
@@ -11,7 +11,7 @@ html {
 	color: $text-color;
 	font-size: $base-font-size;
 
-	@include media( ">=phone", "<tablet" ) {
+	@include media( ">=phone", "<desktop" ) {
 		font-size: $mobile-font-size;
 	}
 }
@@ -59,14 +59,6 @@ a {
 
 .separator {
 	color: $separator-color;
-}
-
-.hidden {
-	display: none;
-
-	@include media( ">=phone", "<tablet" ) {
-		display: flex;
-	}
 }
 
 h1 { font-size: $h1-text-size;          color: $h1-color;   @include media( ">=phone", "<tablet" ) { font-size: $h1-mobile-text-size; }}
